crates/ruff_python_parser/tests/snapshots/invalid_syntax@re_lexing__triple_quoted_fstring_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/re_lexing/triple_quoted_fstring_1.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..198,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 166..178,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 166..178,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 166..178,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 170..176,
                                                    node_index: NodeIndex(None),
                                                    value: "hello ",
                                                },
                                            ),
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 176..178,
                                                    node_index: NodeIndex(None),
                                                    expression: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 177..178,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                    runtime_str: None,
                                                    runtime_interpolation_format_spec: None,
                                                    runtime_formatted_value_format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: true,
                                            unclosed: true,
                                        },
                                    },
                                ),
                            },
                            runtime_joined_str: None,
                            runtime_values: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
3 | # https://github.com/astral-sh/ruff/issues/11929
4 |
5 | f"""hello {x # comment    
  | ^ Syntax Error: unterminated triple-quoted f-string literal (detected at line 6)
6 | y = 1
  |


  |
5 | f"""hello {x # comment    
6 | y = 1
  | ^ Syntax Error: f-string: expecting '}'


  |
3 |   # https://github.com/astral-sh/ruff/issues/11929
4 |
5 |   f"""hello {x # comment    
  |  ___________________________^
6 | | y = 1
  | |_____^ Syntax Error: invalid syntax


  |
5 | f"""hello {x # comment    
6 | y = 1
  |      ^ Syntax Error: invalid syntax
